@@ -18,7 +18,7 @@ if ntest==1 : # dsname, src = 'exp=cxif5315:run=169', 'CxiDs2.0:Cspad.0'
     dsname, src = '/reg/g/psdm/detector/data_test/types/0003-CxiDs2.0-Cspad.0-fiber-data.xtc',  'CxiDs2.0:Cspad.0'
     psana.setOption('psana.calib-dir', '/reg/g/psdm/detector/alignment/cspad/calib-cxi-camera2-2015-01-20/calib')
 
-if ntest==2 : # dsname, src = 'exp=meca1113:run=376', 'MecTargetChamber.0:Cspad2x2.1'
+elif ntest==2 : # dsname, src = 'exp=meca1113:run=376', 'MecTargetChamber.0:Cspad2x2.1'
     dsname = '/reg/g/psdm/detector/data_test/types/0004-MecTargetChamber.0-Cspad.0-three-quads.xtc'
     src = 'MecTargetChamber.0:Cspad2x2.1'
     psana.setOption('psana.calib-dir', '/reg/g/psdm/detector/alignment/cspad2x2/calib-cspad2x2-01-2013-02-13/calib')
