@@ -12,6 +12,10 @@ Please describe any modifications that you made to the package in the
 reverse time order.
 
 ==============
+Tag: V00-03-97
+2016-09-07 Mikhail S. Dubrovin
+- PyDetectorAccess._shaped_array_ - by cpo request return array as is if its shape differs from config.
+
 Tag: V00-03-96
 2016-09-02 Mikhail S. Dubrovin
 - PyDetectorAccess._shaped_array_ - fix n-dimensional shape returned by natural geometry to config shape (PSAS-139).
